--- a/Labs/Lab03/ExApr01/ExApr01.vcxproj
+++ b/Labs/Lab03/ExApr01/ExApr01.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{b83ebcb5-6989-4ff1-b5e6-2e496b774d68}</ProjectGuid>
-    <RootNamespace>ExFix02</RootNamespace>
+    <ProjectGuid>{30acc996-b775-49f1-a58e-3ab378269337}</ProjectGuid>
+    <RootNamespace>ExApr01</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,11 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="Vector2.cpp" />
+    <ClInclude Include="..\ExFix02\ScreenVector2.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Vector2.h" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="ScreenVector2.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
