--- a/Labs/Lab08/ExApr01&02&03/ExApr01&02&03.vcxproj
+++ b/Labs/Lab08/ExApr01&02&03/ExApr01&02&03.vcxproj
@@ -130,7 +130,7 @@
     <ClInclude Include="Pilha.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ExFix01.cpp" />
+    <ClCompile Include="ExApr03.cpp" />
     <ClCompile Include="Pilha.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
