--- a/Labs/Lab11/ExRev01&02&03/ExRev01&02&03.vcxproj.filters
+++ b/Labs/Lab11/ExRev01&02&03/ExRev01&02&03.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="VetorEncapsulado.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="VetorRet.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Vetor.cpp">
@@ -30,6 +33,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ExRev01.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="VetorRet.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
